--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,6 @@
-blinker==1.9.0 ; python_version >= "3.13"
-cachetools==5.5.2 ; python_version >= "3.13"
-certifi==2025.6.15 ; python_version >= "3.13"
-charset-normalizer==3.4.2 ; python_version >= "3.13"
-click==8.2.1 ; python_version >= "3.13"
-colorama==0.4.6 ; python_version >= "3.13" and platform_system == "Windows"
-flask==3.1.1 ; python_version >= "3.13"
-google-auth-oauthlib==1.2.2 ; python_version >= "3.13"
-google-auth==2.40.3 ; python_version >= "3.13"
-gspread==6.2.1 ; python_version >= "3.13"
-idna==3.10 ; python_version >= "3.13"
-itsdangerous==2.2.0 ; python_version >= "3.13"
-jinja2==3.1.6 ; python_version >= "3.13"
-markupsafe==3.0.2 ; python_version >= "3.13"
-oauthlib==3.3.1 ; python_version >= "3.13"
-pyasn1-modules==0.4.2 ; python_version >= "3.13"
-pyasn1==0.6.1 ; python_version >= "3.13"
-python-dotenv==1.1.1 ; python_version >= "3.13"
-requests-oauthlib==2.0.0 ; python_version >= "3.13"
-requests==2.32.4 ; python_version >= "3.13"
-rsa==4.2 ; python_version >= "3.13"
-urllib3==2.5.0 ; python_version >= "3.13"
-werkzeug==3.1.3 ; python_version >= "3.13"
+flask==3.1.1
+requests==2.32.4
+python-dotenv==1.1.1
+gspread==6.2.1
+google-auth==2.40.3
+google-auth-oauthlib==1.2.2
